fix some layout bugs, mainly for IE

--- a/skins/contrib/Mozilla/global.css
+++ b/skins/contrib/Mozilla/global.css
@@ -297,7 +297,6 @@ hr {
 }
 
 #title {
-    width: 150px;
     font-size: 120%;
 }
 
@@ -317,14 +316,11 @@ hr {
     border: none;
     border-radius: 0;
     color: #404040;
-    margin: 0 10px;
+    margin: 0 10px 0 0;
 }
 
 #header .links {
     width: auto;
-}
-
-.login-links ul {
 }
 
 .login-links li {
@@ -336,7 +332,7 @@ hr {
 }
 
 .links li {
-    margin: 0 10px 0 0;
+    margin: 0 0 0 10px;
     padding: 0;
 }
 
