--- a/skins/standard/buglist.css
+++ b/skins/standard/buglist.css
@@ -8,7 +8,7 @@
 .search_description { display: inline-block; margin: 2px; padding: 2px; border: 1px solid gray; }
 .search_description._and { background-color: #e0e0ff; }
 .search_description._or { background-color: #ffffe0; }
-.search_description li { list-style-type: none; margin: 0 0.5em; display: inline-block; }
+.search_description li { list-style-type: none; width: auto; margin: 0 0.5em; display: inline-block; }
 .search_description .search_field { font-weight: bold; }
 .search_description .search_value { font-size: 85%; }
 
