--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -205,7 +205,6 @@
 
     ul.links li {
         display: inline;
-        white-space: nowrap;
     }
 /* link lists (end) */
 
